--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "cupy==11.6.0",
     "datadings==3.4.6",
     "decorator==5.1.1",
+    "dotenv>=0.9.9",
     "easydict==1.9",
     "einops==0.6.1",
     "fastapi>=0.103.2",
