--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,10 @@ dependencies = [
     "cupy==11.6.0",
     "datadings==3.4.6",
     "decorator==5.1.1",
-    "dotenv>=0.9.9",
+    "dotenv==0.9.9",
     "easydict==1.9",
     "einops==0.6.1",
-    "fastapi>=0.103.2",
+    "fastapi==0.103.2",
     "fastrlock==0.8.2",
     "filelock==3.12.2",
     "fsspec==2023.1.0",
@@ -92,8 +92,9 @@ dependencies = [
     "traitlets==5.9.0",
     "typing-extensions==4.7.1",
     "urllib3==2.0.7",
-    "uvicorn>=0.22.0",
+    "uvicorn==0.22.0",
     "wcwidth==0.2.13",
+    "websockets==11.0.3",
     "werkzeug==2.2.3",
     "yacs==0.1.6",
     "zipp==3.15.0",
